<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="brj.com.weatherassignment.commonProcess.ForecastDetail"
    android:layout_margin="@dimen/d10dip"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/s22sp"
        android:text="@string/forcast_title"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/main"/>
                <TextView
                    android:id="@+id/txt_weather"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/desc"/>
                <TextView
                    android:id="@+id/txt_weather_desc"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/pressure"/>
                <TextView
                    android:id="@+id/txt_pressure"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/humidity"/>
                <TextView
                    android:id="@+id/txt_humidity"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/speed"/>
                <TextView
                    android:id="@+id/txt_speed"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/deg"/>
                <TextView
                    android:id="@+id/txt_deg"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/clouds"/>
                <TextView
                    android:id="@+id/txt_clouds"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/rain"/>
                <TextView
                    android:id="@+id/txt_rain"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/day"/>
                <TextView
                    android:id="@+id/txt_day"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/min"/>
                <TextView
                    android:id="@+id/txt_min"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/max"/>
                <TextView
                    android:id="@+id/txt_max"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/eve"/>
                <TextView
                    android:id="@+id/txt_eve"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/morn"/>
                <TextView
                    android:id="@+id/txt_morn"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/ll_detail_section">
                <TextView
                    style="@style/text_detail_section"
                    android:text="@string/nightTemp"/>
                <TextView
                    android:id="@+id/txt_nightTemp"
                    style="@style/text_detail_section"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
